--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "name": "poweronsystem/webframework",
-    "type": "library",
     "description": "Framework for web design.",
     "keywords": ["framework", "web design", "web utilities"],
     "homepage": "https://github.com/poweronsystem/webframework",
@@ -27,5 +26,6 @@
             "src/Application/Functions.php",
             "src/Application/Bootstrap.php"
         ]
-    }
+    },
+    "minimum-stability": "dev"
 }
