--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "php": ">=5.4",
         "mobiledetect/mobiledetectlib": "^2.8",
-        "monolog/monolog": "^1.22"
+        "monolog/monolog": "^1.22",
+        "altorouter/altorouter": "dev-master"
     },
     "autoload": {
         "psr-4": {
