--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": ">=5.4",
         "mobiledetect/mobiledetectlib": "^2.8",
         "monolog/monolog": "^1.22",
-        "altorouter/altorouter": "dev-master"
+        "altorouter/altorouter": "dev-master",
+        "pimple/pimple": "dev-master"
     },
     "autoload": {
         "psr-4": {
