--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,6 @@
 
 <IfModule mod_rewrite.c>
     RewriteEngine on
-    RewriteRule  ^$ testapp/webroot/    [L]
-    RewriteRule  (.*) testapp/webroot/$1 [L]
+    RewriteRule  ^$ test/webroot/    [L]
+    RewriteRule  (.*) test/webroot/$1 [L]
 </IfModule>
