--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         "mobiledetect/mobiledetectlib": "^2.8",
         "monolog/monolog": "^1.22",
         "altorouter/altorouter": "^1.2",
-        "pimple/pimple": "^3.0",
-        "poweronsystem/webframework": "dev-master"
+        "pimple/pimple": "^3.0"
     },
     "autoload": {
         "psr-4": {
