Update Console and post-update-cmd composer scripts

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "scripts": {
-        "post-install-cmd": "PowerOn\\Console::postInstall"
+        "post-update-cmd": "PowerOn\\Application\\Console::postUpdate"
     },
     "require": {
         "php": ">=5.4",
