Update Composer file

--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,11 @@
             "src/Application/Bootstrap.php"
         ]
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/PowerOnSystem/WebFramework.git"
+        }
+    ]
 }
