--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "mobiledetect/mobiledetectlib": "^2.8",
         "monolog/monolog": "^1.22",
         "altorouter/altorouter": "^1.2",
-        "pimple/pimple": "^3.0"
+        "pimple/pimple": "^3.0",
+        "jstewmc/php-helpers": "^0.1.1"
     },
     "autoload": {
         "psr-4": {
