--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,8 @@
             "src/Application/Functions.php",
             "src/Application/Bootstrap.php"
         ]
+    },
+    "require-dev": {
+        "mmucklo/krumo": "^0.5.7"
     }
 }
